--- a/views/minecraft/api.pug
+++ b/views/minecraft/api.pug
@@ -1,7 +1,6 @@
 extends ../layout.pug
 
-block title
-    title ON Demand - Minecraft - API
+block head
     link(rel="stylesheet", href="/css/api.min.css")
     link(rel="stylesheet", href="/css/jjsonviewer.min.css")
 block content
