title 생성함수 생성 및 오류 수정

--- a/views/dev/index.pug
+++ b/views/dev/index.pug
@@ -9,7 +9,7 @@ block content
                 | Telegram GJMoriBot 소개페이지로 이동합니다.
                 br
                 br
-                a.btn.light-blue.lighten-1(href="/dev/gjmoribot") #{texts.goto}
+                a.btn.light-blue.lighten-1(href="/dev/gjmoribot") 살펴보기
 block scrollspy
     div
         ul.section.table-of-contents
