--- a/views/layout.pug
+++ b/views/layout.pug
@@ -28,6 +28,8 @@ html
                         li
                             a(href="#") test
                         li
+                            a(href="/introduce") 자기소개
+                        li
                             a.dropdown-button(href="/minecraft", data-activates="minecraft-nav") 
                                 | Minecraft
                                 i.material-icons.right arrow_drop_down
@@ -119,12 +121,5 @@ html
             .footer-copyright
                 .container
                     p © 2017. 볕뉘(small-sunshine) all rights reserved.
-        script(src="/jquery/jquery.min.js")
-        script(src="/vue/vue.min.js")
-        script(src="/materialize/js/materialize.min.js")
-        script(src="/js/jquery.sticky-kit.min.js")
-        script(async, src="/js/init.min.js")
-        script(async, src="/js/sidenav.min.js")
-        script(async, src="/js/dropdown.min.js")
-        script(async, src="/js/scrollspy.min.js")
+        script(src="/js/app.bundle.js")
         block scripts
