--- a/views/minecraft/api.pug
+++ b/views/minecraft/api.pug
@@ -281,5 +281,4 @@ block scrollspy
             li
                 a(href="#history") Query History
 block scripts
-    script(async, src="/js/jjsonviewer.min.js")
-    script(async, src="/js/api.min.js")
+    script(async, src="/js/mcapi.bundle.js")
