--- a/views/layout.pug
+++ b/views/layout.pug
@@ -121,5 +121,5 @@ html
             .footer-copyright
                 .container
                     p © 2017. 볕뉘(small-sunshine) all rights reserved.
-        script(src="/js/app.bundle.js")
+        script(async, src="/js/app.bundle.js")
         block scripts
