--- a/views/minecraft/nick.pug
+++ b/views/minecraft/nick.pug
@@ -107,4 +107,4 @@ block scrollspy
             li
                 a(href="#help") Help
 block scripts
-    script(src="/js/mcnick.bundle.js")
+    script(async, src="/js/mcnick.bundle.js")
