--- a/views/minecraft/uuid.pug
+++ b/views/minecraft/uuid.pug
@@ -106,4 +106,4 @@ block scrollspy
             li
                 a(href="#help") Help
 block scripts
-    script(src="/js/mcuuid.bundle.js")
+    script(async, src="/js/mcuuid.bundle.js")
