--- a/views/minecraft/history.pug
+++ b/views/minecraft/history.pug
@@ -113,4 +113,4 @@ block scrollspy
             li
                 a(href="#help") Help
 block scripts
-    script(src="/js/mchistory.bundle.js")
+    script(async, src="/js/mchistory.bundle.js")
