로드 안되는것들 수정

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,6 +10,8 @@ html
         link(rel="stylesheet", href="/font-awesome/css/font-awesome.min.css")
         link(rel="stylesheet", href="/css/init.min.css")
 
+        script(src="/js/app.bundle.js")
+
         script(async, src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js")
         script.
             (adsbygoogle = window.adsbygoogle || []).push({
@@ -121,5 +123,4 @@ html
             .footer-copyright
                 .container
                     p © 2017. 볕뉘(small-sunshine) all rights reserved.
-        script(async, src="/js/app.bundle.js")
         block scripts
