--- a/views/minecraft/user.pug
+++ b/views/minecraft/user.pug
@@ -6,8 +6,8 @@ block content
             .card-content
                 #app(v-cloak)
                     p#query(style="display: none")=query
-                    p.card-title 마인크래프트 UUID 조회
-                    p 마인크래프트 UUID으로 유저정보를 찾아볼 수 있습니다.
+                    p.card-title 마인크래프트 닉네임 조회
+                    p 마인크래프트 닉네임으로 유저정보를 찾아볼 수 있습니다.
                     br
                     div(v-if="status == 'searching'")
                         .center-align
@@ -27,8 +27,8 @@ block content
                             .card.red.lighten-2
                                 .card-content.white-text
                                     span.card-title Error
-                                    p 없는 유저입니다. UUID를 다시 확인해주세요.
-                    div(v-else-if="status == 'uuid_null'")
+                                    p 없는 유저입니다. 유저정보를 다시 확인해주세요.
+                    div(v-else-if="status == 'nick_null'")
                         .center-align
                             .card.red.lighten-2
                                 .card-content.white-text
@@ -40,6 +40,12 @@ block content
                                 .card-content.white-text
                                     span.card-title Error
                                     p 에러가 발생했습니다. 나중에 다시 시도해주세요.
+                    div(v-else-if="status == 'not_user'")
+                        .center-align
+                            .card.red.lighten-2
+                                .card-content.white-text
+                                    span.card-title Error
+                                    p 올바른 유저정보가 아닙니다. 유저정보를 다시 확인해주세요
                     div(v-else-if="status == true")
                         .center-align
                             .card.green.lighten-2
@@ -65,8 +71,8 @@ block content
                     div(v-if="form == true")
                         form.row(v-on:submit.prevent="onSubmit")
                             .input-field.col.s9
-                                input#input(placeholder="UUID", type="text", v-model="query")
-                                label(for="uuid") UUID
+                                input#input(placeholder="유저정보", type="text", v-model="query")
+                                label(for="user") 유저정보
                             .col.s3
                                 input.btn.btn-large.green.darken-2(type="submit" value="조회")
                 noscript 본 페이지는 Javascript를 기반으로 작동됩니다.<br/>Javascript를 사용하게끔 설정하여 주신 뒤, 이 페이지를 이용해주시기 바랍니다.
@@ -74,13 +80,14 @@ block content
         .card.z-depth-2
             .card-content
                 p.card-title 정보
-                p 
-                    | 유저 정보는 자체 API서버에서 받아오며, 5분 캐시가 적용됩니다.
-                    | 자체 API서버는 사용을 원하신다면 
-                    a(href="/minecraft/api") API Docs
-                    | 를 확인 부탁드립니다. 유저 스킨은 
-                    a(href="https://crafatar.com" target="_blank") Crafatar
-                    | 에서 받아오고 있습니다.
+                div 
+                    p 
+                        | 유저 정보는 자체 API서버에서 받아오며, 5분 캐시가 적용됩니다.
+                        | 자체 API서버는 사용을 원하신다면 
+                        a(href="/minecraft/api") API Docs
+                        | 를 확인 부탁드립니다. 유저 스킨은 
+                        a(href="https://crafatar.com" target="_blank") Crafatar
+                        | 에서 받아오고 있습니다.
     #help.section.scrollspy
         .card.z-depth-2
             .card-content
@@ -106,4 +113,4 @@ block scrollspy
             li
                 a(href="#help") Help
 block scripts
-    script(async, src="/js/mcuuid.bundle.js")
+    script(async, src="/js/mcuser.bundle.js")
