이메일 무단수집 방지 코드 적용

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -108,7 +108,7 @@ html
                         p.grey-text.text-lighten-4 
                             i.fa.fa-envelope(aria-hidden="true")
                             |  email: 
-                            a.grey-text.text-lighten-4.email(data-email="jioo0224##naver.com")
+                            a.grey-text.text-lighten-4.email(data-email="webmaster##mori.space")
                         p.grey-text.text-lighten-4 본 사이트는 이메일 무단 수집에 거부합니다.
             .footer-copyright
                 .container
