--- a/views/minecraft/history.pug
+++ b/views/minecraft/history.pug
@@ -96,7 +96,7 @@ block content
                     p
                         | 만약 도움이 필요하신 경우 여기로 연락 부탁드립니다.
                         br
-                        a(href="mailto:webmaster@mori.space" target="_blank")
+                        a.email(data-email="webmaster##mori.space")
                             i(class="material-icons tiny") contact_mail
                             |  webmaster@mori.space
                         br
