--- a/views/minecraft/user.pug
+++ b/views/minecraft/user.pug
@@ -97,7 +97,7 @@ block content
                         | 만약 도움이 필요하신 경우 여기로 연락 부탁드립니다.
                         br
                         a.email(data-email="webmaster##mori.space")
-                            i(class="material-icons tiny") contact_mail
+                            i.fa.fa-envelope(aria-hidden="true")
                             |  webmaster@mori.space
                         br
                         a(href="https://t.me/small_sunshine" target="_blank")
