--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,7 +4,26 @@ html
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        title=title
+        
+        meta(property="og:type", content="website")
+        meta(name="twitter:card", content="summary")
+
+        if title
+            title=title
+            meta(property="og:title", content=title)
+
+        if description
+            meta(name="description", content=description)
+            meta(property="og:description", content=description)
+
+        if image
+            meta(property="og:image", content=image)
+
+        if url
+            meta(property="og:url", content=url)
+
+        if author
+            meta(name="author", content=author)
         
         script(src="/js/app.bundle.js")
 
@@ -109,7 +128,7 @@ html
                             i.fa.fa-envelope(aria-hidden="true")
                             |  email: 
                             a.grey-text.text-lighten-4.email(data-email="webmaster##mori.space")
-                        p.grey-text.text-lighten-4 본 사이트는 이메일 무단 수집에 거부합니다.
+                        p.grey-text.text-lighten-4 본 사이트는 이메일 무단 수집을 거부합니다.
             .footer-copyright
                 .container
                     p © 2017. 볕뉘(small-sunshine) all rights reserved.
